--- a/Recettes_cookies/Cookies_extra_moelleux/index.html
+++ b/Recettes_cookies/Cookies_extra_moelleux/index.html
@@ -217,9 +217,11 @@
             <div class="row">
                 <div class="about-card">
                     <div class="card">
-                        <p class="about">Ne vous fiez pas à la consistance en sortant vos cookies du four. Ils seront très mou et vous ne pourrez pas les enlever de la plaque c’est normal. Ils se solidifieront au bout de quelques minutes en refroidissant.</p><br>
-                        <p class="gras"><b><i>Bonne dégustation !!!</i></b><br>
-                        <img src="img/alex.png" alt="image_alex" class="mt-4"></p> 
+                        <p class="about">Ne vous fiez pas à la consistance en sortant vos cookies du four. Ils seront très mou et vous ne pourrez pas les enlever de la plaque c’est normal.<br> Ils se solidifieront au bout de quelques minutes en refroidissant.</p>
+                        <p class="gras"><b><i>Bonne dégustation !!!</i></b></p>
+                        <div class="avatar">
+                            <img src="img/alex.png" alt="image_alex">
+                        </div> 
                      </div>
                 </div>
             </div>
