--- a/Recettes_cookies/index.html
+++ b/Recettes_cookies/index.html
@@ -38,7 +38,6 @@
 
 
 <!-- NAV-BAR -->
-
 	<nav class="navbar sticky-top navbar-expand-md" id="main-nav">
 		<div class="container">
            <button class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navbarCollapse">
@@ -90,8 +89,7 @@
     </nav>
     
     <!-- MAIN -->
-
-   	<section id="titreTop">
+	<section id="titreTop">
    		<div class="container">
    			<div class="col-md-12">
    				<h2>L'univers des Cookies</h2>
@@ -100,19 +98,26 @@
    	</section>
 
    	<div id="main">
-   		<div class="container">
-   			<div class="row">
-   				<div class="group-img col-md-12">
-   					<div class="row justify-content-around">
-						<a href="Cookies_brownies/index.html"><img src="img/cookies12.jpg" alt="cookie" width="370" height="250"><div class="notes text-center"><h5>Cookies brownies choco</h5></div></a>
-
-						<a href="Cookies_moelleux/index.html"><img src="img/cookies02.jpg" alt="cookie" width="370" height="250"><div class="notes text-center"><h5>Cookies moelleux</h5></div></a>
-
-						<a href="Cookies_extra_moelleux/index.html"><img src="img/cookies03.jpg" alt="cookie" width="370" height="250"><div class="notes text-center"><h5>Cookies extra moelleux</h5></div></a>
-					</div>
-				</div>
+   		<div class="container-grille">
+			<div class="item grid-item">
+				<a href="Cookies_brownies/index.html">
+					<img src="img/cookies12.jpg" alt="cookie">
+					<div class="text">Cookies brownies choco</div>
+				</a>
 			</div>
-   		</div>
+			<div class="item grid-item">
+				<a href="Cookies_moelleux/index.html">
+					<img src="img/cookies02.jpg" alt="cookie">
+					<div class="text">Cookies moelleux</div>
+				</a>
+			</div>
+			<div class="item grid-item">
+				<a href="Cookies_extra_moelleux/index.html">
+					<img src="img/cookies03.jpg" alt="cookie">
+					<div class="text">Cookies extra moelleux</div>
+				</a>
+			</div>
+		</div>
    	</div>
 
     <!-- SOCIAL -->
