--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
                 </a>
             </div>
             <div class="item item-4">
-                <img src="img/img04.jpg" alt="">
-                <div class="text">Galette à l'amande</div>
+                <a href="Recettes_de_fêtes/index.html">
+                    <img src="img/img04.jpg" alt="">
+                    <div class="text">Galette à l'amande</div>
+                </a>
             </div>
             <div class="item item-5">
                 <img src="img/img05.jpg" alt="">
